syntax = "proto3";

package app.simplecloud.controller.shared.proto;

option java_package = "app.simplecloud.controller.shared.proto";
option java_multiple_files = true;

message GroupDefinition {
  string name = 1;
  string template_name = 2;
  uint64 minimum_memory = 3;
  uint64 maximum_memory = 4;
  uint64 start_port = 5;
  uint64 online_servers = 6;
  uint64 minimum_online_count = 7;
  uint64 maximum_online_count = 8;
  map<string, string> properties = 9;
}

message ServerDefinition {
  string unique_id = 1;
  string group_name = 2;
  string host_id = 3;
  uint32 numerical_id = 4;
  string template_id = 5;
  string ip = 6;
  uint64 port = 7;
  uint64 minimum_memory = 8;
  uint64 maximum_memory = 9;
  uint64 player_count = 10;
  map<string, string> properties = 11;
  ServerState state = 12;
}

enum ServerState {
  STARTING = 0;
  AVAILABLE = 1;
  INGAME = 2;
  STOPPING = 3;
}

message StatusResponse {
  string status = 1;
}