syntax = "proto3";

package app.simplecloud.controller.shared.proto;

option java_package = "app.simplecloud.controller.shared.proto";
option java_multiple_files = true;

import "controller_types.proto";
import "controller_server_api.proto";

message StartServerRequest {
  GroupDefinition group = 1;
  ServerDefinition server = 2;
}

service ServerHostService {
  rpc startServer(StartServerRequest) returns (ServerDefinition);
  rpc stopServer(ServerDefinition) returns (StatusResponse);
  rpc reattachServer(ServerDefinition) returns (StatusResponse);
}